wird gaps bugfix

--- a/styles.scss
+++ b/styles.scss
@@ -134,8 +134,11 @@ h3 {
 }
 
 .chapter {
-  page-break-inside: avoid;
+  break-inside: avoid-column;
   position: relative;
+  margin: 0em auto;
+  display: inline-block;
+  width: 100%;
 }
 
 .products,
@@ -154,7 +157,6 @@ h3 {
   list-style-type: none;
   padding-bottom: 0.25em;
   position: relative;
-  page-break-inside: avoid;
 }
 
 .products p,
